[gd_scene load_steps=57 format=2]

[ext_resource path="res://Assets/Spritesheets/Player/NES - Contra - Bill Rizer & Lance Bean.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Spritesheets/Player2/on_water.png" type="Texture" id=3]
[ext_resource path="res://Assets/Spritesheets/Player/Idle.png" type="Texture" id=4]
[ext_resource path="res://Assets/Spritesheets/Player/jump.png" type="Texture" id=5]
[ext_resource path="res://Assets/Spritesheets/Player/run_n_shoot_down.png" type="Texture" id=6]
[ext_resource path="res://Assets/Spritesheets/Player/death.png" type="Texture" id=7]
[ext_resource path="res://Assets/Spritesheets/Player/run_n_shoot_up.png" type="Texture" id=8]
[ext_resource path="res://Assets/Spritesheets/Player/look_up.png" type="Texture" id=9]
[ext_resource path="res://Assets/Spritesheets/Player/run_n_shoot.png" type="Texture" id=10]
[ext_resource path="res://Assets/Spritesheets/Player/run.png" type="Texture" id=11]
[ext_resource path="res://Assets/Spritesheets/Player/lowered.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4.12736, 16.9115 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4.12737, 0.650436 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 25, 42 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 24, 42 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 24, 42 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 49, 42 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 24, 0, 24, 42 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 24, 42 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 24, 0, 24, 42 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 24, 42 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 128, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 160, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 32, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 32, 42 )

[sub_resource type="SpriteFrames" id=88]
animations = [ {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "death",
"speed": 8.0
}, {
"frames": [ SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "fall_on_water",
"speed": 6.0
}, {
"frames": [ SubResource( 57 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 58 ) ],
"loop": true,
"name": "idle_look_up",
"speed": 5.0
}, {
"frames": [ SubResource( 59 ) ],
"loop": true,
"name": "idle_lowered",
"speed": 5.0
}, {
"frames": [ SubResource( 60 ), SubResource( 61 ) ],
"loop": true,
"name": "idle_shoot",
"speed": 5.0
}, {
"frames": [ SubResource( 62 ), SubResource( 63 ) ],
"loop": true,
"name": "idle_shoot_up",
"speed": 5.0
}, {
"frames": [ SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ) ],
"loop": true,
"name": "jump",
"speed": 8.0
}, {
"frames": [ SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ SubResource( 74 ), SubResource( 75 ) ],
"loop": true,
"name": "run_on_water",
"speed": 5.0
}, {
"frames": [ SubResource( 76 ), SubResource( 77 ), SubResource( 78 ) ],
"loop": true,
"name": "run_shoot",
"speed": 5.0
}, {
"frames": [ SubResource( 82 ), SubResource( 83 ), SubResource( 84 ) ],
"loop": true,
"name": "run_shoot_down",
"speed": 5.0
}, {
"frames": [ SubResource( 85 ), SubResource( 86 ), SubResource( 87 ) ],
"loop": true,
"name": "run_shoot_up",
"speed": 5.0
}, {
"frames": [ SubResource( 79 ) ],
"loop": true,
"name": "shoot_on_water",
"speed": 5.0
}, {
"frames": [ SubResource( 80 ) ],
"loop": true,
"name": "shoot_on_water_up_45",
"speed": 5.0
}, {
"frames": [ SubResource( 81 ) ],
"loop": true,
"name": "shoot_on_water_up_90",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 212, 445 )
scale = Vector2( 4.24, 2.69048 )
script = ExtResource( 2 )
speed = 265
gravityForce = 13
jumpForce = 8

[node name="BodyBoxCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="FootBoxCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16.354 )
scale = Vector2( 0.999999, 1 )
shape = SubResource( 4 )

[node name="Animation" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AnimatedSprite_Right" type="AnimatedSprite" parent="."]
position = Vector2( -10.8491, -24.9026 )
scale = Vector2( 1.17925, 1 )
frames = SubResource( 88 )
animation = "idle"
playing = true
centered = false

[node name="AnimatedSprite_Left" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -17.4528, -24.5309 )
scale = Vector2( 1.17925, 1 )
frames = SubResource( 88 )
animation = "jump"
frame = 2
playing = true
centered = false
flip_h = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
